--- a/about-me.html
+++ b/about-me.html
@@ -7,6 +7,7 @@
 <body>
   <header>
     <h1> About Karen Jolly </h1>
+    <link rel="stylesheet" href="styles/stylesheet.css">
   </header>
 <section>
   <img src = "./images/winter.jpg"width = "444" height="333" alt="An adorable image">
