--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Index</title>
+  <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
-  <nav>
-    <a href ="about-me.html"> About Me </a>
-  </nav>
   <header>
     <h1> Projects: Finished and In Work</h1>
 
   </header>
-
+<hr>
 <section>
 <h2> Software Projects </h2>
 <article>
@@ -30,6 +28,7 @@
     <img src = "./images/mario.jpg" width = "444" height="333" alt="An adorable image">
   </p>
 </article>
+<hr>
 
 <article>
   <h3> <a href ="#" > Seattle Armchair Philosophers </a> </h3>
@@ -47,6 +46,8 @@
   </p>
 </article>
 
+<hr>
+
 <h2> Articles and Blog Posts </h2>
 <article>
   <h3> <a href ="#" > Quine and Nominalism </a> </h3>
@@ -55,6 +56,7 @@
     <img src = "./images/coffee.jpg" width = "444" height="333" alt="An adorable image">
   </p>
 </article>
+<hr>
 <article>
   <h3> <a href ="#" > Fun Philosophy Links </a> </h3>
   <p> The very first project I did for this class!
@@ -62,10 +64,13 @@
     <img src = "./images/kitty.jpg" width = "444" height="333" alt="An adorable image">
   </p>
 </article>
-
+<hr>
 
 </section>
 <footer>
+  <nav>
+    <a href ="about-me.html"> About Me </a>
+  </nav>
   <p> This page built by me, in 2018. Images are from pixabay.com</p>
 </footer>
 </body>
