Lotsa changes for chapter 5

--- a/about-me.html
+++ b/about-me.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+    <script src="https://kit.fontawesome.com/dfa14ef9e5.js" crossorigin="anonymous"></script>
   <title>Index</title>
+  <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
-  <header>
-    <h1> About Karen Jolly </h1>
-    <link rel="stylesheet" href="styles/stylesheet.css">
-  </header>
+  <div class='header'>
+    <div class='logo'> <p class = 'title'> Karen Jolly  <i class="fas fa-dove"> </i></p> </div>
+    <ul class='menu'>
+      <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
+      <li><a href='#'>Subscribe</a></li>
+      <li><a href ="about-me.html"> About Me </a></li>
+    </ul>
+  </div>
+<div class = 'container'>
 <section>
   <img src = "./images/winter.jpg"width = "444" height="333" alt="An adorable image">
   <h2> Software Engineer </h2>
@@ -28,8 +35,8 @@
   </article>
 
 </section>
+</div>
 <nav>
-  <a href ="index.html"> My Projects </a>
 </nav>
 <footer>
   <p> This page built by me, in 2018. Images are from pixabay.com </p>
