--- a/index.html
+++ b/index.html
@@ -2,76 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <script src="https://kit.fontawesome.com/dfa14ef9e5.js" crossorigin="anonymous"></script>
   <title>Index</title>
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
-  <header>
-    <h1> Projects: Finished and In Work</h1>
+  <div class='header'>
+    <div class='logo'> <p class = 'title'> Karen Jolly <i class="fas fa-dove"></i></p> </div>
+    <ul class='menu'>
+      <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
+      <li><a href='#'>Subscribe</a></li>
+      <li><a href ="about-me.html"> About Me </a></li>
+    </ul>
+  </div>
+  <div class = 'container'>
+  <section>
+  <h2> Software Projects </h2>
+  <hr>
+  <article>
+    <h3> <a href ="#" > Video Game Review Site </a> </h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
+      Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo.
+      <br> <br>
+      Purus viverra accumsan in nisl nisi. Amet risus nullam eget felis eget nunc lobortis.
+      Et malesuada fames ac turpis egestas maecenas pharetra convallis.
+      Rhoncus mattis rhoncus urna neque viverra justo nec. At augue eget arcu dictum.
+      im lobortis scelerisque fermentum dui faucibus in ornare quam viverra.
+      Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
+        </p>
+      <br>
+      <img src = "./images/mario.jpg" width = "444" height="333" alt="An adorable image">
 
-  </header>
-<hr>
-<section>
-<h2> Software Projects </h2>
-<article>
-  <h3> <a href ="#" > Video Game Review Site </a> </h3>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
-    Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo.
-    <br> <br>
-    Purus viverra accumsan in nisl nisi. Amet risus nullam eget felis eget nunc lobortis.
-    Et malesuada fames ac turpis egestas maecenas pharetra convallis.
-    Rhoncus mattis rhoncus urna neque viverra justo nec. At augue eget arcu dictum.
-    im lobortis scelerisque fermentum dui faucibus in ornare quam viverra.
-    Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
-    <br>
-    <img src = "./images/mario.jpg" width = "444" height="333" alt="An adorable image">
-  </p>
-</article>
-<hr>
+  </article>
 
-<article>
-  <h3> <a href ="#" > Seattle Armchair Philosophers </a> </h3>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
-    Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo.
-    <br> <br>
-    Purus viverra accumsan in nisl nisi. Amet risus nullam eget felis eget nunc lobortis.
-    Et malesuada fames ac turpis egestas maecenas pharetra convallis.
-    Rhoncus mattis rhoncus urna neque viverra justo nec. At augue eget arcu dictum.
-    im lobortis scelerisque fermentum dui faucibus in ornare quam viverra.
-    Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
-    <br>
-    <img src = "./images/books.jpg" width = "444" height="333" alt="An adorable image">
-  </p>
-</article>
+  <article>
+    <h3> <a href ="#" > Seattle Armchair Philosophers </a> </h3>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
+      Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo.
+      <br> <br>
+      Purus viverra accumsan in nisl nisi. Amet risus nullam eget felis eget nunc lobortis.
+      Et malesuada fames ac turpis egestas maecenas pharetra convallis.
+      Rhoncus mattis rhoncus urna neque viverra justo nec. At augue eget arcu dictum.
+      im lobortis scelerisque fermentum dui faucibus in ornare quam viverra.
+      Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
+          </p>
+      <br>
+      <img src = "./images/books.jpg" width = "444" height="333" alt="An adorable image">
 
-<hr>
+  </article>
 
-<h2> Articles and Blog Posts </h2>
-<article>
-  <h3> <a href ="#" > Quine and Nominalism </a> </h3>
-  <p> Essay I wrote in college about whether Quine provides a convincing counterargument to nominalism.
-    <br>
-    <img src = "./images/coffee.jpg" width = "444" height="333" alt="An adorable image">
-  </p>
-</article>
-<hr>
-<article>
-  <h3> <a href ="#" > Fun Philosophy Links </a> </h3>
-  <p> The very first project I did for this class!
-    <br>
-    <img src = "./images/kitty.jpg" width = "444" height="333" alt="An adorable image">
-  </p>
-</article>
-<hr>
 
-</section>
-<footer>
-  <nav>
-    <a href ="about-me.html"> About Me </a>
-  </nav>
-  <p> This page built by me, in 2018. Images are from pixabay.com</p>
-</footer>
+  <h2> Articles and Blog Posts </h2>
+  <hr>
+  <article>
+    <h3> <a href ="#" > Quine and Nominalism </a> </h3>
+    <p> Essay I wrote in college about whether Quine provides a convincing counterargument to nominalism.  </p>
+      <br>
+      <img src = "./images/coffee.jpg" width = "444" height="333" alt="An adorable image">
+
+  </article>
+  <article>
+    <h3> <a href ="#" > Fun Philosophy Links </a> </h3>
+    <p> The very first project I did for this class!  </p>
+      <br>
+      <img src = "./images/kitty.jpg" width = "444" height="333" alt="An adorable image">
+
+  </article>
+  </section>
+</div>
+  <footer>
+    <p> This page built by me, in 2018. Images are from pixabay.com</p>
+  </footer>
 </body>
 </html>
