--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
+  </style>
   <div class='header'>
     <div class='logo'> <p class = 'title'> Karen Jolly <i class="fas fa-dove"></i></p> </div>
     <ul class='menu'>
@@ -58,14 +61,18 @@
   <hr>
   <article>
     <h3> <a href ="#" > Quine and Nominalism </a> </h3>
-    <p> Essay I wrote in college about whether Quine provides a convincing counterargument to nominalism.  </p>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
+      Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo. </p>
       <br>
       <img src = "./images/coffee.jpg" width = "444" height="333" alt="An adorable image">
 
   </article>
   <article>
     <h3> <a href ="#" > Fun Philosophy Links </a> </h3>
-    <p> The very first project I did for this class!  </p>
+    <p> The very first project I did for this class! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
+      Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo. </p>
       <br>
       <img src = "./images/kitty.jpg" width = "444" height="333" alt="An adorable image">
 
