--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
     <div class='logo'> <p class = 'title'> Karen Jolly  <i class="fas fa-dove"> </i></p> </div>
     <ul class='menu'>
       <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
-      <li><a href='#'>Subscribe</a></li>
+      <li><a href='subscribe.html'>Subscribe</a></li>
       <li><a href ="about-me.html"> About Me </a></li>
     </ul>
   </div>
