--- a/subscribe.html
+++ b/subscribe.html
@@ -50,7 +50,8 @@
       <span class="checkmark"></span>
       </label>
       <label>
-      <input type="checkbox" name="interest" value="other">Other
+      <input type="checkbox" name="interest" value="
+      ">Other
       <span class="checkmark"></span>
       </label>
     </fieldset>
