Changes for accesibilty

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div class='header'>
     <div class='logo'> <p class = 'title'> Karen Jolly <i class="fas fa-dove"></i></p> </div>
     <ul class='menu'>
-      <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
-      <li><a href='subscribe.html'>Subscribe</a></li>
-      <li><a href ="about-me.html"> About Me </a></li>
+      <li><a class = linkfont href='index.html'>Blog</a></li>          <!-- These are the same -->
+      <li><a class = linkfont href='subscribe.html'>Subscribe</a></li>
+      <li><a class = linkfont href ="about-me.html"> About Me </a></li>
     </ul>
   </div>
   <div class = 'container'>
@@ -35,7 +35,7 @@
       Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
         </p>
       <br>
-      <img src = "./images/mario.jpg" width = "444" height="333" alt="An adorable image">
+      <img src = "./images/mario.jpg" width = "444" height="333" alt="Mario ready to take on the day!">
 
   </article>
 
@@ -52,7 +52,7 @@
       Cursus euismod quis viverra nibh cras pulvinar. Etiam erat velit scelerisque in dictum.
           </p>
       <br>
-      <img src = "./images/books.jpg" width = "444" height="333" alt="An adorable image">
+      <img src = "./images/books.jpg" width = "444" height="333" alt="A fun secret library filled with books">
 
   </article>
 
@@ -65,7 +65,7 @@
       Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
       Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo. </p>
       <br>
-      <img src = "./images/coffee.jpg" width = "444" height="333" alt="An adorable image">
+      <img src = "./images/coffee.jpg" width = "444" height="333" alt="Delicious coffee...perfect for philosophy">
 
   </article>
   <article>
@@ -74,7 +74,7 @@
       Mi sit amet mauris commodo quis imperdiet. Quis blandit turpis cursus in hac habitasse platea dictumst.
       Consequat interdum varius sit amet mattis vulputate enim nulla. Ante metus dictum at tempor commodo. </p>
       <br>
-      <img src = "./images/kitty.jpg" width = "444" height="333" alt="An adorable image">
+      <img src = "./images/kitty.jpg" width = "444" height="333" alt="A philosopher cat lecturing to attentive daisies">
 
   </article>
   </section>
