--- a/about-me.html
+++ b/about-me.html
@@ -10,14 +10,14 @@
   <div class='header'>
     <div class='logo'> <p class = 'title'> Karen Jolly  <i class="fas fa-dove"> </i></p> </div>
     <ul class='menu'>
-      <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
-      <li><a href='subscribe.html'>Subscribe</a></li>
-      <li><a href ="about-me.html"> About Me </a></li>
+      <li><a class = linkfont href='index.html'>Blog</a></li>          <!-- These are the same -->
+      <li><a class = linkfont href='subscribe.html'>Subscribe</a></li>
+      <li><a class = linkfont href ="about-me.html"> About Me </a></li>
     </ul>
   </div>
 <div class = 'container'>
 <section>
-  <img src = "./images/winter.jpg"width = "444" height="333" alt="An adorable image">
+  <img src = "./images/winter.jpg"width = "444" height="333" alt="A peaceful winter day.">
   <h2> Software Engineer </h2>
   <article>
     <p> Karen has worked in a variety of engineering roles since getting her physics degree in 2014. She started life
