--- a/subscribe.html
+++ b/subscribe.html
@@ -10,9 +10,9 @@
   <div class='header'>
     <div class='logo'> <p class = 'title'> Karen Jolly  <i class="fas fa-dove"> </i></p> </div>
     <ul class='menu'>
-      <li><a href='index.html'>Blog</a></li>          <!-- These are the same -->
-      <li><a href='#'>Subscribe</a></li>
-      <li><a href ="about-me.html"> About Me </a></li>
+      <li><a class = linkfont href='index.html'>Blog</a></li>          <!-- These are the same -->
+      <li><a class = linkfont href='#'>Subscribe</a></li>
+      <li><a class = linkfont href ="about-me.html"> About Me </a></li>
     </ul>
   </div>
 <div class = 'container'>
