more updates for accesibiltity

--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@
   </div>
 <div class = 'container'>
 <section>
-  <img src = "./images/winter.jpg"width = "444" height="333" alt="A peaceful winter day.">
+  <img src = "./images/winter.jpg"width = "444" height="333" alt="A peaceful winter day." title = "A peaceful winter day.">
   <h2> Software Engineer </h2>
   <article>
     <p> Karen has worked in a variety of engineering roles since getting her physics degree in 2014. She started life
